# sensor-fused-manipulation-robot

./: .gitignore  README.md
src/tabletop_manipulation/: CMakeLists.txt  package.xml
src/tabletop_manipulation/config/: ur5_controllers.yaml  ur5_gz_init.yaml
src/tabletop_manipulation/launch/: manipulation.launch.py  simulation.launch.py
src/tabletop_manipulation/rviz/: manipulation.rviz
src/tabletop_manipulation/tabletop_manipulation/: chatbox_node.py  constants.py  lidar_fusion_node.py  llm_commander_node.py  moveit_task_node.py  robot_description_server.py  vlm_perception_node.py
src/tabletop_manipulation/urdf/: ur5_with_camera.urdf.xacro
src/tabletop_manipulation/worlds/: tabletop.sdf
src/tabletop_moveit_config/: CMakeLists.txt  package.xml
src/tabletop_moveit_config/config/: moveit_controllers.yaml  ur5_with_camera.srdf
src/tabletop_moveit_config/launch/: move_group.launch.py
